--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="banner-container">
         <i class="rope"></i>
         <i class="banner">
-         will you be my girlfriend? 🥹
+         Kamu Cantik Banget 🥹
         <i class="triangle"></i>
     </i>
     </div>
